--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -985,7 +985,6 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     box-sizing: border-box;
     left: 0;
     min-height: 57px;
-    padding: 8px 0;
     right: 0;
     width: 100%;
     max-height: 255px;
@@ -999,8 +998,8 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 {
     cursor: pointer;
     font-size: 14px;
-    line-height: 25px;
-    padding: 3px 38px 3px 15px;
+    line-height: 30px;
+    padding: 0 38px 0 15px;
     position: relative;
 }
 #rezon-forms .tt-suggestion > p 
@@ -1018,14 +1017,16 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     background-color: #ffd900;
     color: #333;
 }
-#rezon-forms .tt-dropdown-menu .iata-code 
+#rezon-forms .tt-dropdown-menu .iata-code
 {
+    font-family: "Oxygen Mono";
     font-weight: bold;
-    color: #707176;
-    font-size: 11px;
+    font-size: 10px;
+    color: #78909c;
+    letter-spacing: 0.1em;
     position: absolute;
     right: 10px;
-    top: 6px;
+    top: 0;
 }
 #rezon-forms .tt-dropdown-menu .express-code 
 {
@@ -1043,7 +1044,6 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     display: block;
     font-size: 12px;
     line-height: 15px;
-    margin: 7px 0 0 0;
     padding: 0 19px 1px 10px;
 }
 #rezon-forms .typeahead-selectpicker 
