--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1553,7 +1553,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 {
     display: none;
 }
-#rezon-forms .avia-form .fields-container.extended .field.time + .time 
+#rezon-forms .fields-container.extended .field.time + .time 
 {
     -webkit-flex-basis: 25%;
 
