--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1615,7 +1615,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     flex-basis: 15%;
     cursor: pointer;
 }
-#rezon-forms .route .multy-route.last .add_segment 
+#rezon-forms .route .multy-route .add_segment 
 {
     -webkit-flex-basis: 100%;
 
@@ -1657,6 +1657,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     display: block;
     flex-basis: 10%;
     flex-grow: 1;
+    text-align: center;
 }
 #rezon-forms .pass .pass_types 
 {
@@ -2551,6 +2552,29 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 
 @media (min-width: 1200px) 
 {
+    #rezon-forms .fields-container .multy-route.last .delete-leg,
+    #rezon-forms .route .multy-route .add_segment
+    {
+        -webkit-flex-basis: 20%;
+        flex-basis: 20%;
+    }
+    #rezon-forms .fields-container.extended .field.date
+    {
+        -webkit-flex-basis: 10%;
+        flex-basis: 10%;
+    }
+    #rezon-forms .fields-container.extended .field.time,
+    #rezon-forms .route .add_segment,
+    #rezon-forms .fields-container.extended .delete-leg
+    {
+        -webkit-flex-basis: 20%;
+        flex-basis: 20%;
+    }
+    #rezon-forms .route.extended .multy-route .add_segment
+    {
+        -webkit-flex-basis: 100%;
+        flex-basis: 100%;
+    }
     #rezon-forms #railway-form-shoot .field.date
     {
         -webkit-flex-basis: 15%;
