--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -1629,12 +1629,17 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 }
 #rezon-forms .fields-container.route .field.pass 
 {
-    -webkit-flex-basis: 25%;
     -webkit-order: 4;
     -webkit-flex-grow:0;
+    -webkit-flex-basis: 20%;
 
     order: 4;
     flex-grow: 0;
+    flex-basis: 20%;
+}
+#rezon-forms .fields-container.route.extended .field.pass 
+{
+    -webkit-flex-basis: 25%;
     flex-basis: 25%;
 }
 #rezon-forms .fields-container.route .hide_s,
