--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -888,6 +888,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     font-size: 12px;
     line-height: 45px;
 	text-align: center;
+    cursor: pointer;
 }
 #rezon-forms .button-hide span 
 {
@@ -2213,6 +2214,11 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     {
         height: 100%;
     }
+    #rezon-forms .fields-container .field.airport.opened .delete,
+    #rezon-forms .fields-container .field.station.opened .delete
+    {
+        display: none;
+    }
     #rezon-forms .tt-dropdown-menu,
     #rezon-forms .carriers-finder 
     {
@@ -2518,7 +2524,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     #rezon-forms .swap 
     {
         margin-bottom: -17px;
-        margin-left: -70px;
+        margin-left: -74px;
         transform: rotate(90deg);
         -webkit-transform: rotate(90deg);
         z-index: 3;
