--- a/src/css/shoot.css
+++ b/src/css/shoot.css
@@ -691,7 +691,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 {
     background: #fff;
     box-sizing: border-box;
-    border-radius: 2px;
+    border-radius: 0 0 2px 2px;
     cursor: pointer;
     display: none;
     flex-direction: column;
@@ -699,6 +699,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
     position: absolute;
     right: auto;
     z-index: 10;
+    width: 100%;
 }
 #rezon-forms .selectpicker .option
 {
@@ -754,7 +755,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 #rezon-forms .select-age 
 {
     background: #fff;
-    border-radius: 2px;
+    border-radius: 0 0 2px 2px;
     line-height: 14px;
     outline: 0;
     position: absolute;
@@ -1418,7 +1419,7 @@ html[data-btb="True"] #rezon-forms .extended-form-link:hover
 #rezon-forms .field .control-field 
 {
     background: #fff;
-    border-radius: 2px;
+    /*border-radius: 2px;*/
     min-height: 45px;
     position: relative;
 }
